fix bugs. Ver1 complete. Use select_related and prefetch_related to reduce DB hit

--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -388,7 +388,7 @@
                 const postId = button.dataset.postId;
                 // Disable button temporarily
                 button.disabled = true;
-                fetch(`/api/like/${postId}`, {
+                fetch(`api/posts/${postId}/like/`, {
                     method: "POST",
                     headers: {
                         "X-CSRFToken": getCookie("csrftoken"),
